--- a/app/src/main/res/layout/activity_aprender.xml
+++ b/app/src/main/res/layout/activity_aprender.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/round_button"
         android:text="@string/colores"
-        app:backgroundTint="@color/gris_claro"
+        app:backgroundTint="@color/active"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
